Make getTrustLevel() mandatory